Update Statistic component to include i18n prop and use translations for label and description in StatisticCard

--- a/app/i18n/locales/en/hero.json
+++ b/app/i18n/locales/en/hero.json
@@ -1,4 +1,7 @@
 {
   "title": "Create Interactive Minigames Right At The Store",
-  "subtitle": "Create Games That Easily Breakthrough Sales"
+  "subtitle": "Create Games That Easily Breakthrough Sales",
+  "label_customer": "Customer",
+  "label_game": "Game created",
+  "label_play": "Plays and favorites"
 }
